--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -143,17 +143,17 @@ display:inline-block;
 }
 /*--- slider-css --*/
 .banner1{
-	background:url(../images/bnr.jpg) no-repeat 0px 0px;
+	background:url(../images/테슬라1.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	min-height:585px;
 }
 .banner2{
-	background:url(../images/bnr2.jpg) no-repeat 0px 0px;
+	background:url(../images/테슬라2.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	min-height:585px;
 }
 .banner3{
-	background:url(../images/bnr3.jpg) no-repeat 0px 0px;
+	background:url(../images/테슬라3.png) no-repeat 0px 0px;
 	background-size:cover;
 	min-height:585px;
 }
@@ -383,11 +383,11 @@ span.disc {
 }
 .ofr-pic{
 	float:left;
-	width:20%;
+	width:25%;
 }
 .ofr-pic2{
 	float:left;
-	width:19.5%;
+	width:25%;
 }
 .ofr-pic-info{
 	float:left;
